# gmb

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile
.github/workflows/: build-and-test.yml
dependencies/: CMakeLists.txt  LinearAlgebra_SHA1  Profiler_SHA1  libtensor_SHA1
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  main.cpp
src/molpro/: CMakeLists.txt
src/molpro/gmb/: CMakeLists.txt  action_ccd.h  action_ccsd.h  action_mp2.h  amplitudes.h  boson.h  constants.h  container.h  get_integral.cpp  get_integral.h  get_integral_pol.cpp  get_integral_pol.h  gmb.cpp  gmb.h  hamiltonian.h  init.cpp  init.h  libtensor_utils.cpp  libtensor_utils.h  main.cpp  problem.cpp  problem_ccd.h  problem_ccsd.h  problem_eom-ccsd-left.h  problem_eom-ccsd.h  problem_eom.h  problem_gen.cpp  problem_gen.h  problem_mp2.h  run_method.cpp  run_method.h  supercontainer.h  update.h  utils.cpp  utils.h
src/molpro/gmb/expressions/: CMakeLists.txt  action_ccd.h  action_mp2.h  add_d2.h  anti.h  ccd.h  d2_xxxx.h  diag_oovv.h  diag_ov.h  diag_xx.cpp  diag_xx.h  energy_hf.h  fock_xx.h  id_xx.h  id_xxxx.h  mp2.h  update.h
src/molpro/gmb/expressions/ccsd/: ccsd.h  energy.h  if2_oo.h  if_oo.h  if_ov.h  if_vv.h  iw_oooo.h  iw_ovov.h  iw_vvvv.h  t1.h  t2.h  tau.h
src/molpro/gmb/expressions/eom-ccsd/: eom-ccsd-left.h  eom-ccsd.h  hbar_oovv.h  hbar_ov.h  if_oo.h  if_ov.h  if_vv.h  il_oo.h  il_vv.h  ir1_oo.h  ir1_vv.h  ir2_oo.h  ir2_vv.h  ir_vv.h  iw2_ooov.h  iw2_ovvv.h  iw_oooo.h  iw_ooov.h  iw_ovov.h  iw_ovvv.h  iw_vvvv.h  l1.h  l2.h  precond_oovv.h  precond_ov.h  r0.h  r1.h  r2.h  tau.h
test/: CMakeLists.txt  H2O-VDZ.fcidump  He-VDZ-UHF.fcidump  eom-ccsd-test.cpp  libtest_utils.cpp  libtest_utils.h
test/H2O-VDZ/: energy1  energy2  energy_ccd  energy_ccsd  energy_eom-ccsd  energy_hf  energy_mp2  h1  h1_oo  h1_vv  h2_oooo  h2o-vdz.out  opdm  vnn
test/H2O-VDZ/H2O-VDZ.molpro/: .Info.plist.writing_object  H2O-VDZ.inp  Info.plist
test/H2O-VDZ/H2O-VDZ.molpro/run/6.molpro/: .Info.plist.writing_object  6.inp  6.out  6.xml  Info.plist  h2o-vdz.fcidump
test/H2O-VDZ/H2O-VDZ.molpro/run/7.molpro/: .Info.plist.writing_object  7.xml  Info.plist  h2o-vdz.fcidump
test/He-VDZ/: He-VDZ.fcidump  energy1  energy2  energy_ccd  energy_ccsd  energy_eom-ccsd  energy_hf  energy_mp2  h1  h1_oo  h1_vv  h2  h2_oooo  he-vdz-eom.out  opdm  tpdm
test/Li-VDZ-UHF/: Li-VDZ-UHF.fcidump  energy_ccd  energy_hf  energy_mp2
test/hubbard/: DMO  H0MO  PERTH0MO  RESULT  dipole  hubbard.dm  hubbard.fcidump  hubbard.sm  polariton.fcidump  polariton_dmo.fcidump
